fixed webjar and decorators.xml